# superbible

./: Cargo.toml  README.md
assets/shaders/alien-rain/: alien-rain.fs.glsl  alien-rain.vs.glsl
assets/shaders/colored-triangle/: colored-triangle.fs.glsl  colored-triangle.vs.glsl
assets/shaders/fragment-shader/: fragment-shader.fs.glsl  fragment-shader.vs.glsl
assets/shaders/geometry-shader/: geometry-shader.gs.glsl  geometry-shader.tes.glsl  geometry-shader.vs.glsl
assets/shaders/grass/: grass.fs.glsl  grass.vs.glsl
assets/shaders/instanced-attribs/: instanced-attribs.fs.glsl  instanced-attribs.vs.glsl
assets/shaders/interpolation/: interpolation.fs.glsl  interpolation.vs.glsl
assets/shaders/ktx-viewer/: ktx-viewer.fs.glsl  ktx-viewer.vs.glsl
assets/shaders/mirrorclampedge/: mirrorclampedge.fs.glsl  mirrorclampedge.vs.glsl
assets/shaders/moving-triangle/: moving-triangle.vs.glsl
assets/shaders/spinny-cube/: spinny-cube.fs.glsl  spinny-cube.vs.glsl
assets/shaders/spinny-cubes/: spinny-cubes.fs.glsl
assets/shaders/tessellated-triangle/: tessellated-triangle.fs.glsl  tessellated-triangle.tcs.glsl
assets/shaders/text-overlay/: textoverlay.fs.glsl  textoverlay.vs.glsl
assets/shaders/texture-coordinates/: texture-coordinates.fs.glsl  texture-coordinates.vs.glsl
assets/shaders/textured-triangle/: textured-triangle.fs.glsl  textured-triangle.vs.glsl
assets/shaders/triangle/: triangle.fs.glsl  triangle.vs.glsl
assets/shaders/tunnel/: tunnel.fs.glsl  tunnel.vs.glsl
assets/shaders/wrapmodes/: wrapmodes.fs.glsl  wrapmodes.vs.glsl
src/: 00_solidred.rs  01_colors.rs  02_point.rs  03_triangle.rs  04_movingtriangle.rs  05_coloredtriangle.rs  06_tesselatedtriangle.rs  06_tessellatedtriangle.rs  07_geometryshader.rs  08_fragmentshader.rs  09_interpolation.rs  10_spinnycube.rs  11_spinnycubes.rs  12_texturedtriangle.rs  13_ktxviewer.rs  14_texturecoordinates.rs  15_tunnel.rs  16_wrapmodes.rs  17_mirrorclampedge.rs  18_alienrain.rs  19_fragmentlist.rs  20_grass.rs  21_instancedattribs.rs  app.rs  core.rs  main.rs
src/support/: app.rs  ktx.rs  lib.rs  mod.rs  object.rs  shader.rs  text.rs
