[package]
name = "superbible"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

[dependencies]
glfw = "0.32.0"
gl = "0.13.0"
nom = "5.0.1"
rand = "0.7.2"

[dependencies.cgmath]
version = "0.17.0"
features = ["swizzle"]

[lib]
name = "support"
path = "src/support/lib.rs"
